# bitshares_snapshot

libraries/: CMakeLists.txt
libraries/blockchain/: chain_database.cpp
libraries/lotto/: CMakeLists.txt  betting_rule.cpp  combination.cpp  common.cpp  dac.json  dice_rule.cpp  lotto_block.cpp  lotto_chain_state.cpp  lotto_cli.cpp  lotto_client.cpp  lotto_db.cpp  lotto_delegate.cpp  lotto_operations.cpp  lotto_outputs.cpp  lotto_rpc_server.cpp  lotto_rule.cpp  lotto_rule.json  lotto_rule_validator.cpp  lotto_transaction_evaluation_state.cpp  lotto_transaction_validator.cpp  lotto_wallet.cpp  rule.cpp  rule.json  ticket.cpp
libraries/lotto/include/bts/lotto/: betting_rule.hpp  combination.hpp  common.hpp  dice_rule.hpp  lotto_asset.hpp  lotto_block.hpp  lotto_chain_state.hpp  lotto_cli.hpp  lotto_client.hpp  lotto_config.hpp  lotto_db.hpp  lotto_delegate.hpp  lotto_operations.hpp  lotto_outputs.hpp  lotto_rpc_server.hpp  lotto_rule.hpp  lotto_rule_validator.hpp  lotto_transaction_evaluation_state.hpp  lotto_transaction_validator.hpp  lotto_wallet.hpp  rule.hpp  ticket.hpp  ticket_factory.hpp
libraries/net/include/bts/net/: chain_messages.hpp
programs/: CMakeLists.txt
programs/lotto/: CMakeLists.txt  default_config.json  genesis.json  keys4test.txt  main.cpp  server.bat  server.cpp  trustee_client.bat
programs/lotto/htdocs/: index.html
tests/: CMakeLists.txt  lotto_tests.cpp  multi_inherient_test.cpp
tests/lotto/: CMakeLists.txt  lotto_chain_tests.cpp  lotto_rule_tests.cpp
